Fixed Collapsing Hero Div
by making the .hero img display: block and using margins to push the
content over to the right instead of floats

--- a/styles.css
+++ b/styles.css
@@ -97,8 +97,8 @@ hr {
   width: 100%;
 }
 .hero img {
-  position: absolute;
-  right: 0;
+  display: block;
+  margin-left: 25%;
   width: 75vw;
   z-index: 10;
 }
